--- a/frontend/desarrolladoras.html
+++ b/frontend/desarrolladoras.html
@@ -10,27 +10,15 @@
       animation: fadeIn 0.8s ease-in;
     }
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
+    
   </style>
 </head>
 <body>
-  <div id="notification-container-error" class="notification is-danger is-hidden">
-    <button class="delete" onclick="closeNotification('notification-container-error')"></button>
-    <span id="notification-message-error"></span>
-  </div>
-  <div id="notification-container-info" class="notification is-info is-hidden">
-    <button class="delete" onclick="closeNotification('notification-container-info')"></button>
-    <span id="notification-message-info"></span>
-  </div>
   <div id="navbar-container"></div>
+
   <section class="hero is-primary is-bold fade-in">
     <div class="hero-body">
       <div class="container has-text-centered">
@@ -38,9 +26,18 @@
       </div>
     </div>
   </section>
+
   <section class="section fade-in">
     <div class="container">
-      <div class="has-text-centered mb-4 level-left">
+      <div id="notification-container-error" class="notification is-danger is-hidden">
+        <button class="delete" onclick="closeNotification('notification-container-error')"></button>
+        <span id="notification-message-error"></span>
+      </div>
+      <div id="notification-container-info" class="notification is-info is-hidden">
+        <button class="delete" onclick="closeNotification('notification-container-info')"></button>
+        <span id="notification-message-info"></span>
+      </div>
+      <div class="has-text-left mb-4">
         <button class="button is-primary" onclick="window.location.href='desarrolladora-form.html'">Agregar desarrolladora</button>
       </div>
       <div class="table-container">
@@ -68,6 +65,22 @@
       </p>
     </div>
   </footer>
+  <div class="modal" id="activar-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Confirmar eliminación</p>
+      </header>
+      <section class="modal-card-body">
+        <p id="confirmar-mensaje">¿Estás seguro que querés eliminar esta desarrolladora?</p>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-danger" onclick="confirmDelete()">Eliminar</button>
+        <button class="button" onclick="cerrarModalConfirmacion()">Cancelar</button>
+      </footer>
+    </div>
+  </div>
+
   <script src="./src/env.js"></script>
   <script src="./src/navbar.js"></script>
   <script>
@@ -95,21 +108,35 @@
           });
         });
     }
+    let idAEliminar = null;
+    let nombreAEliminar = "";
+    
     function borrar(id, nombre) {
-      if (confirm(`¿Eliminar desarrolladora "${nombre}"?`)) {
-        fetch(`${desarrolladorasUrl}/${id}`, { method: "DELETE" })
-          .then(res => {
-            if (!res.ok) {
-              throw new Error("Error al eliminar la desarrolladora.");
-            }
-            cargarDesarrolladoras();
-            showInfoNotification(`Desarrolladora "${nombre}" eliminada.`);
-          })
-          .catch(err => {
-            console.error(err);
-            showErrorNotification("No se pudo eliminar la desarrolladora.");
-          });
-      }
+      idAEliminar = id;
+      nombreAEliminar = nombre;
+      document.getElementById("confirmar-mensaje").textContent =  `¿Eliminar desarrolladora "${nombre}"? Se eliminaran todos los juegos de esta desarrolladora.`;
+      document.getElementById("activar-modal").classList.add("is-active");
+    }
+
+    function cerrarModalConfirmacion() {
+      document.getElementById("activar-modal").classList.remove("is-active");
+      idAEliminar = null;
+      nombreAEliminar = "";
+    }
+
+    function confirmDelete() {
+      if (!idAEliminar) return;
+      fetch(`${desarrolladorasUrl}/${idAEliminar}`, { method: "DELETE" })
+        .then(res => {
+          if (!res.ok) throw new Error("Error al eliminar la desarrolladora.");
+          cargarDesarrolladoras();
+          showInfoNotification(`Desarrolladora "${nombreAEliminar}" eliminada.`);
+        })
+        .catch(err => {
+          console.error(err);
+          showErrorNotification("No se pudo eliminar la desarrolladora.");
+        })
+        .finally(() => cerrarModalConfirmacion());
     }
 
     function showInfoNotification(message) {
