agrego modal de confirmacion para eliminar comentarios

--- a/frontend/comentarios.html
+++ b/frontend/comentarios.html
@@ -73,6 +73,21 @@
       </p>
     </div>
   </footer>
+  <div class="modal" id="activar-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Confirmar eliminación</p>
+      </header>
+      <section class="modal-card-body">
+        <p id="confirmar-mensaje">¿Estás seguro que querés eliminar este comentario?</p>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-danger" onclick="confirmarEliminacion()">Eliminar</button>
+        <button class="button" onclick="cerrarModalConfirmacion()">Cancelar</button>
+      </footer>
+    </div>
+  </div>
 
   <script src="./src/env.js"></script>
   <script src="./src/navbar.js"></script>
@@ -128,7 +143,7 @@
                 <span class="icon"><i class="fas fa-edit"></i></span>
                 <span>Editar</span>
               </a>
-              <button class="button is-small is-danger" onclick='confirmDelete(${c.id}, "${c.usuario}")'>
+              <button class="button is-small is-danger" onclick='borrar(${c.id}, "${c.usuario}")'>
                 <span class="icon"><i class="fas fa-trash"></i></span>
                 <span>Borrar</span>
               </button>
@@ -180,28 +195,37 @@
         });
     }
 
-    function eliminarComentario(id) {
-      fetch(`${comentariosUrl}/${id}`, { method: "DELETE" })
+    let idAEliminar = null;
+    let nombreAEliminar = "";
+    
+    function borrar(id, nombre) {
+      idAEliminar = id;
+      nombreAEliminar = nombre;
+      document.getElementById("confirmar-mensaje").textContent = `¿Eliminar comentario de  "${nombre}"?`;
+      document.getElementById("activar-modal").classList.add("is-active");
+    }
+
+    function cerrarModalConfirmacion() {
+      document.getElementById("activar-modal").classList.remove("is-active");
+      idAEliminar = null;
+      nombreAEliminar = "";
+    }
+
+    function confirmarEliminacion() {
+      if (!idAEliminar) return;
+      fetch(`${comentariosUrl}/${idAEliminar}`, { method: "DELETE" })
         .then(res => {
-          if (!res.ok) return res.text().then(text => { throw new Error(text); });
-          return res.json();
-        })
-        .then(() => {
-          showInfoNotification("Comentario eliminado");
+          if (!res.ok) throw new Error("Error al eliminar el comentario.");
           cargarComentarios();
+          showInfoNotification(`Comentario de "${nombreAEliminar}" eliminado.`);
         })
         .catch(err => {
           console.error(err);
-          showErrorNotification(err.message);
-        });
+          showErrorNotification("No se pudo eliminar eliminar el comentario.");
+        })
+        .finally(() => cerrarModalConfirmacion());
     }
 
-    function confirmDelete(id, usuario) {
-      if (confirm(`¿Eliminar comentario de "${usuario}"?`)) {
-        document.getElementById("navbar-container").scrollIntoView({ behavior: 'smooth' });
-        eliminarComentario(id);
-      }
-    }
 
     function showInfoNotification(message) {
       closeNotification("notification-container-error");
