--- a/frontend/detalles-desarrolladora.html
+++ b/frontend/detalles-desarrolladora.html
@@ -53,13 +53,28 @@
       <div id="juegos-lista"></div>
     </div>
   </section>
+  <div class="modal" id="activar-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Confirmar eliminación</p>
+      </header>
+      <section class="modal-card-body">
+        <p id="confirmar-mensaje">¿Estás seguro que querés eliminar esta desarrolladora?</p>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-danger" onclick="confirmDelete()">Eliminar</button>
+        <button class="button" onclick="cerrarModalConfirmacion()">Cancelar</button>
+      </footer>
+    </div>
+  </div>
 
   <script src="./src/env.js"></script>
   <script src="./src/navbar.js"></script>
   <script>
     const params = new URLSearchParams(window.location.search);
     const id = params.get("id");
-const desarrolladoraUrl = `${window._env_.API_URL}/desarrolladoras/${id}/details`;
+    const desarrolladoraUrl = `${window._env_.API_URL}/desarrolladoras/${id}/details`;
 
   fetch(desarrolladoraUrl)
     .then(res => {
@@ -109,21 +124,37 @@ const desarrolladoraUrl = `${window._env_.API_URL}/desarrolladoras/${id}/details
       showErrorNotification("Error al cargar los datos.");
     });
 
+    let idAEliminar = null;
+    let nombreAEliminar = "";
+
     function borrar(id, nombre) {
-      if (confirm(`¿Eliminar desarrolladora "${nombre}"?`)) {
-        fetch(`${window._env_.API_URL}/desarrolladoras/${id}`, { method: "DELETE" })
-          .then(res => {
-            if (!res.ok) throw new Error("No se pudo eliminar la desarrolladora.");
-            showInfoNotification("Desarrolladora eliminada.");
-            setTimeout(() => {
-              window.location.href = "desarrolladoras.html";
-            }, 1000);
-          })
-          .catch(err => {
-            console.error(err);
-            showErrorNotification("Error al eliminar la desarrolladora.");
-          });
-      }
+      idAEliminar = id;
+      nombreAEliminar = nombre;
+      document.getElementById("confirmar-mensaje").textContent = `¿Eliminar desarrolladora "${nombre}"? Se eliminaran todos los juegos de esta desarrolladora.`;
+      document.getElementById("activar-modal").classList.add("is-active");
+    }
+
+    function cerrarModalConfirmacion() {
+      document.getElementById("activar-modal").classList.remove("is-active");
+      idAEliminar = null;
+      nombreAEliminar = "";
+    }
+
+    function confirmDelete() {
+      if (!idAEliminar) return;
+      fetch(`${window._env_.API_URL}/desarrolladoras/${idAEliminar}`, { method: "DELETE" })
+        .then(res => {
+          if (!res.ok) throw new Error("Error al eliminar la desarrolladora.");
+          showInfoNotification(`Desarrolladora "${nombreAEliminar}" eliminada.`);
+          setTimeout(() => {
+            window.location.href = "desarrolladoras.html";
+          }, 1000);
+        })
+        .catch(err => {
+          console.error(err);
+          showErrorNotification("No se pudo eliminar la desarrolladora.");
+        })
+        .finally(() => cerrarModalConfirmacion());
     }
 
     function showInfoNotification(message) {
