--- a/frontend/generos.html
+++ b/frontend/generos.html
@@ -83,10 +83,29 @@
       </p>
     </div>
   </footer>
+  <div class="modal" id="activar-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Confirmar eliminación</p>
+      </header>
+      <section class="modal-card-body">
+        <p id="confirmar-mensaje">¿Estás seguro que querés eliminar este género?</p>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-danger" onclick="DeleteGenero()">Eliminar</button>
+        <button class="button" onclick="cerrarModalConfirmacion()">Cancelar</button>
+      </footer>
+    </div>
+  </div>
+
   <script src="./src/env.js"></script>
   <script src="./src/navbar.js"></script>
   <script>
     const generosBackendUrl = window._env_.API_URL + "/generos";    
+    let idGeneroAEliminar = null;
+    let nombreGeneroAEliminar = "";
+
     function cargarGeneros() {
       let generosTableBody = document.getElementById("generos-table-body");
       generosTableBody.innerHTML = "";
@@ -142,8 +161,11 @@
         showErrorNotification(error.message);
       });
     }
-    function deleteGenero(id) {
-      fetch(`${generosBackendUrl}/${id}`, { method: 'DELETE' })
+
+    function DeleteGenero() {
+      if (!idGeneroAEliminar) return;
+
+      fetch(`${generosBackendUrl}/${idGeneroAEliminar}`, { method: 'DELETE' })
         .then(response => {
           if (!response.ok) {
             return response.json().then(error => {
@@ -153,14 +175,28 @@
           return response.json();
         })
         .then(data => {
-          showInfoNotification("Género eliminado correctamente");
+          showInfoNotification(`Género "${nombreGeneroAEliminar}" eliminado correctamente.`);
           resetFormulario();
           cargarGeneros();
         })
         .catch(error => {
           showErrorNotification(error.message);
-        });
+        })
+        .finally(() => cerrarModalConfirmacion());
     }
+    function confirmDelete(id, nombre) {
+      idGeneroAEliminar = id;
+      nombreGeneroAEliminar = nombre;
+      document.getElementById("confirmar-mensaje").textContent = `¿Estás seguro que deseas borrar el género "${nombre}"? Todos los juegos dejarán de tener este género.`;
+      document.getElementById("activar-modal").classList.add("is-active");
+    }
+
+    function cerrarModalConfirmacion() {
+      document.getElementById("activar-modal").classList.remove("is-active");
+      idGeneroAEliminar = null;
+      nombreGeneroAEliminar = "";
+    }
+
     function editarGenero(id, nombre) {
       document.getElementById("form-genero-id").value = id;
       document.getElementById("form-genero-nombre").value = nombre;
@@ -169,11 +205,7 @@
       document.getElementById("form-genero-cancelar-container").classList.remove("is-hidden");
       document.getElementById("genero-form").scrollIntoView({ behavior: 'smooth' });
     }
-    function confirmDelete(id, nombre) {
-      if (confirm(`¿Estás seguro que deseas borrar el género "${nombre}"? Todos los juegos dejarán de tener este género.`)) {
-        deleteGenero(id);
-      }
-    }
+
     function resetFormulario() {
       document.getElementById("form-genero-id").value = "";
       document.getElementById("form-genero-nombre").value = "";
