--- a/frontend/juego-form.html
+++ b/frontend/juego-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="theme-dark">
 <head>
   <meta charset="UTF-8">
   <title>Formulario de Juego</title>
