Se agrega imagen predeterminada en el carrousel de juegos de la home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
       <figure class="image" style="margin: auto;">
         <img id="ciclo-imagen"
              class="fade-image"
-             src="https://bulma.io/assets/images/placeholders/1280x960.png"
+             src="./src/assets/videojuegos.jpg"
              alt="Juego destacado">
       </figure>
     </div>
